WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197881
[Pointer Events] The pointerenter and pointerleave events target the wrong element on iOS
https://bugs.webkit.org/show_bug.cgi?id=197881
Summary
[Pointer Events] The pointerenter and pointerleave events target the wrong el...
Antoine Quint
Reported
2019-05-14 09:14:32 PDT
[Pointer Events] The pointerenter and pointerleave events target the wrong element on iOS
Attachments
Patch
(7.23 KB, patch)
2019-05-14 09:19 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-05-14 09:19:55 PDT
Created
attachment 369858
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-14 09:50:43 PDT
Comment on
attachment 369858
[details]
Patch Clearing flags on attachment: 369858 Committed
r245286
: <
https://trac.webkit.org/changeset/245286
>
WebKit Commit Bot
Comment 3
2019-05-14 09:50:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-14 09:53:09 PDT
<
rdar://problem/50770403
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug